--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,11 +37,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: login to docker hub
-        run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
+        run: docker login -u ${{secrets.DOCKER_USERNAME}} --password-stdin ${{secrets.DOCKER_PASSWORD}}
       - name: buil docker image
         run: docker compose --build
       - name: push image to docker hub
-        run: docker push shaloom/node-app
+        run: docker push docker push shaloomniyibizi/node-app:latest
 
   securityCheck:
     needs: build
