fix login to docker v3

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,14 +21,14 @@ jobs:
           echo "running installing dependecies ......"
           npm install
 
-  test:
-    needs: build
-    runs-on: ubuntu-latest
-    steps:
-      - name: Run linting test
-        run: |
-          echo "running linting test ......"
-          npm run lint
+  # test:
+  #   needs: build
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - name: Run linting test
+  #       run: |
+  #         echo "running linting test ......"
+  #         npm run lint
 
   dockerize:
     needs: build
