--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -60,7 +60,7 @@ jobs:
   deploy:
     name: deployment
     runs-on: ubuntu-latest
-    needs: [test, securityCheck]
+    needs: securityCheck
     steps:
       - name: Deployment an application
         run: |
