--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,7 +35,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: login to docker hub
-        run: docker login -u ${{secrets.DOCKER_USERNAME}} --password-stdin ${{secrets.DOCKER_PASSWORD}}
+        run: docker login -u ${{secrets.DOCKER_USERNAME}} -p ${{secrets.DOCKER_PASSWORD}}
       - name: buil docker image
         run: docker compose up --build
       - name: push image to docker hub
