--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,8 +36,8 @@ jobs:
     steps:
       - name: login to docker hub
         run: docker login -u ${{secrets.DOCKER_USERNAME}} -p ${{secrets.DOCKER_PASSWORD}}
-      # - name: build docker image
-      #   run: docker build -t shaloomniyibizi/node-app . -f Dockerfile
+      - name: build docker image
+        run: docker build . -t shaloomniyibizi/node-app .
       - name: push image to docker hub
         run: docker push shaloomniyibizi/node-app
 
