--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,9 +37,7 @@ jobs:
       - name: login to docker hub
         run: docker login -u ${{secrets.DOCKER_USERNAME}} -p ${{secrets.DOCKER_PASSWORD}}
       - name: build docker image
-        run: cd /app
-      - name: build docker image
-        run: docker build - < Dockerfile
+        run: docker build -t shaloomniyibizi/node-app .
       - name: push image to docker hub
         run: docker push shaloomniyibizi/node-app
 
